recursion.cons.butlast.ButLast.scala.error
Erreur de compilation :
ButLast:8: error: type mismatch;
 found   : List[Int]
 required: Int
      compute_butLast(l.tail, List(acc, l.head));
                                   ^