recursion.cons.butlast.ButLast.scala.code
def butLast(l:List[Int]):List[Int] = {
  
	def compute_butLast(l:List[Int], acc:List[Int]):List[Int] = {
    if(l.tail == Nil){
      return acc;
    } else {
      compute_butLast(l.tail, List(acc, l.head));
    }
    
    
  }
  return compute_butLast(l, List())
}